the 1.20.2 0.1 verson  of the mod

--- a/src/main/resources/assets/the-broken-mod/lang/en_us.json
+++ b/src/main/resources/assets/the-broken-mod/lang/en_us.json
@@ -10,6 +10,9 @@
   "item.the-broken-mod.diamond_infested": "infested diamond",
 
 
+  "computer_decoder.be": "decoder",
+
+
   "block.the-broken-mod.rift_block": "rift block",
 
 
